Update Loteria.asList()